--- a/pages2/catalogo.html
+++ b/pages2/catalogo.html
@@ -66,8 +66,8 @@
     </header>
 
 
-    <main class="Catalogo">
-
+    <main>
+      <div class="container">
         <div class="titulo-catalogo">
 
             <h1>Catálogo</h1>
@@ -148,16 +148,15 @@
                 <img class="imgcard rounded" src="../assets/img/vinilo .jpg" alt="Vinilos"><br>
                 <a class="carrito" href="">Agregar al carrito</a>
             </div>
-
         </div>
-
-    </section>
+    </div>
+    
 
     </main>
 
 
-    <footer class="piepagina">
-
+    <footer>
+     <div class="container">
         <p>Todos los derechos reservados</p>
 
         <ul class="redes">
@@ -183,7 +182,7 @@
         <a href="https://wa.link/s5gxm1" target="_blank"> <img src="../assets/img/wp-removebg-preview.png"
                 height="100px" class="wp">
         </a>
-
+    </div>
     </footer>
 
 
