--- a/pages2/nosotros.html
+++ b/pages2/nosotros.html
@@ -66,8 +66,8 @@
     </header>
 
 
-    <main class="Nosotros">
-
+    <main>
+     <div class="container">
 
         <h2 class="Nosotros__contactos">¿Donde nos encontramos?</h2> <br>
         <p class="Nosotros__contactos">Estamos ubicados en la calle 3 de febrero 640, san fernando</p>
@@ -80,13 +80,13 @@
                 referrerpolicy="no-referrer-when-downgrade" class="tamaño-mapa"></iframe>
         </div>
 
-
+    </div>
 
     </main>
 
 
-    <footer class="piepagina">
-
+    <footer>
+   <div class="container">
         <p>Todos los derechos reservados</p>
 
         <ul class="redes">
@@ -112,7 +112,7 @@
         <a href="https://wa.link/s5gxm1" target="_blank"> <img src="../assets/img/wp-removebg-preview.png"
                 height="100px" class="wp">
         </a>
-
+    </div>
     </footer>
 
 
