--- a/pages2/ofertas.html
+++ b/pages2/ofertas.html
@@ -91,9 +91,9 @@
     </div>
    </main>
 
-   <footer class="piepagina">
-
-    <p>Todos los derechos reservados</p>
+  <footer>
+    <div class="container">
+     <p>Todos los derechos reservados</p>
 
     <ul class="redes">
         <li class="redes__iconos">
@@ -118,7 +118,7 @@
     <a href="https://wa.link/s5gxm1" target="_blank"> <img src="../assets/img/wp-removebg-preview.png"
             height="100px" class="wp">
     </a>
-
+  </div>
 </footer>
 
 
