--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
     </main>
 
-    <footer class="piepagina">
-
+    <footer>
+       <div class="container">
         <p>Todos los derechos reservados</p>
 
         <ul class="redes">
@@ -107,7 +107,7 @@
         <a href="https://wa.link/s5gxm1" target="_blank"> <img src="./assets/img/wp-removebg-preview.png"
                 height="100px" class="wp">
         </a>
-
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
