--- a/pages2/Micarrito.html
+++ b/pages2/Micarrito.html
@@ -66,7 +66,8 @@
     </header>
 
 
-    <main class="Contenedor-carrito">
+    <main>
+      <div class="container">
         <section class="titulo-carrito">
             <h1>Mi carrito de compras</h1>
             <!-- <p> aca se va a encontrar el carrito de compras y el total</p> -->
@@ -102,12 +103,12 @@
                 </form>
             </div>
         </div >
-
-
+    </div>
+     
     </main>
 
-    <footer class="piepagina">
-
+    <footer>
+    <div class="container">
         <p>Todos los derechos reservados</p>
 
         <ul class="redes">
@@ -133,7 +134,7 @@
         <a href="https://wa.link/s5gxm1" target="_blank"> <img src="../assets/img/wp-removebg-preview.png"
                 height="100px" class="wp">
         </a>
-
+     </div>
     </footer>
 
 
