--- a/pages2/Micarrito.html
+++ b/pages2/Micarrito.html
@@ -80,9 +80,9 @@
             <div>
                 <p><b>Inicie sesión</b></p>
                 <form>
-                    <div><input type="email" placeholder="ejemplo@gmail.com" required></div>
-                    <div><input type="password" placeholder="*******" required></div>
-                    <div><input type="submit" value="Enviar"></div>
+                    <div class="boton"><input type="email" placeholder="ejemplo@gmail.com" required></div>
+                    <div class="boton"><input type="password" placeholder="*******" required></div>
+                    <div><button class="boton boton--iniciar" type="submit">Iniciar</button></div>
 
                 </form>
             </div>
@@ -93,13 +93,14 @@
             <div>
                 <p><b>Registrate aquí</b></p>
                 <form>
-                    <div><input type="text" placeholder="Nombre" required></div>
-                    <div><input type="text" placeholder="Apellido" required></div>
-                    <div><input type="Tel" placeholder="Telefono" required></div>
-                    <div><input type="email" placeholder="ejemplo@gmail.com" required></div>
-                    <div><input type="password" placeholder="*******" required></div>
-                    <div><input type="submit" value="Enviar"></div>
-
+                    <div class="boton"><input type="text" placeholder="Nombre" required></div>
+                    <div class="boton"><input type="text" placeholder="Apellido" required></div>
+                    <div class="boton"><input type="Tel" placeholder="Telefono" required></div>
+                    <div class="boton"><input type="email" placeholder="ejemplo@gmail.com" required></div>
+                    <div class="boton"><input type="password" placeholder="*******" required></div>
+                    <div><button class="boton boton--aceptar" type="submit">Registrarse</button></div>
+                    <div><button class="boton boton--cancelar" type="reset">Borrar</button></div>
+                   
                 </form>
             </div>
         </div >
@@ -114,17 +115,17 @@
         <ul class="redes">
             <li class="redes__iconos">
                 <a href="https://www.facebook.com/profile.php?id=100034425409895" target="_blank"><img
-                        src="../assets/img/face_png-removebg-preview.png" alt="Facebook" height="50px">
+                        src="../assets/img/face_png-removebg-preview.png" alt="Facebook" height="40px">
                 </a>
             </li>
             <li class="redes__iconos">
                 <a href="https://www.instagram.com/puppy.dis/" target="_blank"><img
-                        src="../assets/img/instagram_-removebg-preview.png" alt="instagram" height="50px">
+                        src="../assets/img/instagram_-removebg-preview.png" alt="instagram" height="40px">
                 </a>
             </li>
             <li class="redes__iconos">
                 <a href="https://www.youtube.com/@puppydiss" target="_blank"><img
-                        src="../assets/img/youtube_-removebg-preview.png" alt="Youtube" height="50px"></a>
+                        src="../assets/img/youtube_-removebg-preview.png" alt="Youtube" height="40px"></a>
 
             </li>
 
